# rpg_monocular_pose_estimator

./: .gitignore  CMakeLists.txt  README.md  dependencies.yaml  mainpage.dox  package.xml
doxygen_documentation/: doxygen_config_file.cfg
doxygen_documentation/bibtex/: bibliography.bib
include/monocular_pose_estimator/: combinations.h  datatypes.h  led_detector.h  monocular_pose_estimator_node.h  p3p.h  pose_estimator.h
launch/: demo.launch
marker_positions/: demo_marker_positions.yaml
monocular_pose_estimator/: CMakeLists.txt  monocular_pose_estimator_nodelet.xml  package.xml
monocular_pose_estimator/cfg/: MonocularPoseEstimator.cfg
monocular_pose_estimator/include/monocular_pose_estimator/: monocular_pose_estimator.h  nodelet.h
monocular_pose_estimator/launch/: demo.launch  nodelet.launch
monocular_pose_estimator/src/: monocular_pose_estimator.cpp  node.cpp  nodelet.cpp
monocular_pose_estimator_lib/: CMakeLists.txt  package.xml
monocular_pose_estimator_lib/include/monocular_pose_estimator_lib/: combinations.h  datatypes.h  led_detector.h  pose_estimator.h  visualization.h
monocular_pose_estimator_lib/src/: combinations.cpp  led_detector.cpp  p3p.cpp  pose_estimator.cpp  visualization.cpp
src/: combinations.cpp  led_detector.cpp  monocular_pose_estimator_node.cpp  p3p.cpp  pose_estimator.cpp  visualization.cpp
