<?xml version="1.0"?>
<package format="2">
  <name>monocular_pose_estimator</name>
  <version>0.0.0</version>
  <description>The monocular_pose_estimator package</description>

  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>GNU GPL</license>

  <author>Karl Schwabe</author>
  <author>Matthias Faessler</author>
  <author>Elias Mueggler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_catkin</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>monocular_pose_estimator_lib</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>

  <export>
    <nodelet plugin="${prefix}/monocular_pose_estimator_nodelet.xml"/>
  </export>
</package>
