<?xml version="1.0"?>
<package format="2">
  <name>monocular_pose_estimator_lib</name>
  <version>0.0.0</version>
  <description>The monocular_pose_estimator_lib package</description>

  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>GNU GPL</license>

  <author>Karl Schwabe</author>
  <author>Matthias Faessler</author>
  <author>Elias Mueggler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>roscpp</depend>

  <export>
    
  </export>
</package>
